# internal/handlers/notification.go
@@ -2,10 +2,13 @@ package api
 
 import (
 	"encoding/json"
+	"github.com/gorilla/mux"
 	"insight/internal/models"
 	"insight/pkg/consts"
 	"insight/pkg/utils"
+	"log"
 	"net/http"
+	"strconv"
 )
 
 // @Summary addNewNotification
@@ -29,6 +32,7 @@ func (h *Handler) addNewNotification(w http.ResponseWriter, r *http.Request) {
 		utils.ErrorResponse(w, consts.InvalidRequestData, 400, 0)
 		return
 	}
+	log.Println(params.Shops)
 	err = h.service.Notifications.CreateNewNotification(params)
 	if err != nil {
 		h.logger.Error(err)
@@ -36,5 +40,103 @@ func (h *Handler) addNewNotification(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	utils.Response(w, consts.Success)
+}
+
+// @Summary getAllNotifications
+// @Security ApiKeyAuth
+// @Tags Notifications
+// @Description Просмотр списока всех уведомлений
+// @ID getAllNotifications
+// @Accept json
+// @Produce json
+// @Param page query string true "Введите данные"
+// @Param limit query string true "Введите данные"
+// @Success 200 {object} utils.DataResponse
+// @Failure 500 {object} utils.DataResponse
+// @Failure 400 {object} utils.DataResponse
+// @Failure default {object} utils.DataResponse
+// @Router /notifications/list [get]
+func (h *Handler) getAllNotifications(w http.ResponseWriter, r *http.Request) {
+	pageStr := mux.Vars(r)["page"]
+	limitStr := mux.Vars(r)["limit"]
+	page, err := strconv.Atoi(pageStr)
+	if err != nil {
+		h.logger.Error(err)
+		utils.ErrorResponse(w, consts.PageErrResponse, 400, 0)
+		return
+	}
+	limit, err := strconv.Atoi(limitStr)
+	if err != nil {
+		h.logger.Error(err)
+		utils.ErrorResponse(w, consts.CountErrResponse, 400, 0)
+		return
+	}
+	notifications, err := h.service.Notifications.GetAllNotifications(page, limit)
+	if err != nil {
+		h.logger.Error(err)
+		utils.ErrorResponse(w, consts.InternalServerError, 500, 0)
+		return
+	}
+	utils.Response(w, notifications)
+}
+
+// @Summary getNotification
+// @Security ApiKeyAuth
+// @Tags Notifications
+// @Description Просмотр уведомления
+// @ID getNotification
+// @Accept json
+// @Produce json
+// @Param notification_id query string true "Введите данные"
+// @Success 200 {object} utils.DataResponse
+// @Failure 500 {object} utils.DataResponse
+// @Failure 400 {object} utils.DataResponse
+// @Failure default {object} utils.DataResponse
+// @Router /notifications/by-id [get]
+func (h *Handler) getNotification(w http.ResponseWriter, r *http.Request) {
+	notificationStr := mux.Vars(r)["notification_id"]
+	notificationId, err := strconv.Atoi(notificationStr)
+	if err != nil {
+		h.logger.Error(err)
+		utils.ErrorResponse(w, consts.InvalidRequestData, 400, 0)
+		return
+	}
+	notification, err := h.service.Notifications.GetNotificationById(notificationId)
+	if err != nil {
+		h.logger.Error(err)
+		utils.ErrorResponse(w, consts.InternalServerError, 500, 0)
+		return
+	}
+	utils.Response(w, notification)
+}
+
+// @Summary deleteNotification
+// @Security ApiKeyAuth
+// @Tags Notifications
+// @Description Удаление уведомления
+// @ID deleteNotification
+// @Accept json
+// @Produce json
+// @Param notification_id query string true "Введите данные"
+// @Success 200 {object} utils.DataResponse
+// @Failure 500 {object} utils.DataResponse
+// @Failure 400 {object} utils.DataResponse
+// @Failure default {object} utils.DataResponse
+// @Router /notifications/rm [delete]
+func (h *Handler) deleteNotification(w http.ResponseWriter, r *http.Request) {
+	notificationStr := mux.Vars(r)["notification_id"]
+	notificationId, err := strconv.Atoi(notificationStr)
+	if err != nil {
+		h.logger.Error(err)
+		utils.ErrorResponse(w, consts.InvalidRequestData, 400, 0)
+		return
+	}
+	err = h.service.Notifications.DeleteNotification(notificationId)
+	if err != nil {
+		h.logger.Error(err)
+		utils.ErrorResponse(w, consts.InternalServerError, 500, 0)
+		return
+	}
 	utils.Response(w, consts.Success)
 }
